# esp_idf_arduino_template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  sdkconfig  sdkconfig.defaults
lib/Adafruit_ST7789/: CMakeLists.txt
lib/Adafruit_ST77xx/: CMakeLists.txt
lib/PubSubClient/: CMakeLists.txt
lib/QRcodeDisplay/: CMakeLists.txt
lib/QRcodeDisplay/src/: qrencode.c  qrencode.h
lib/qrcode_st7789/: CMakeLists.txt  qrcode_st7789.cpp  qrcode_st7789.h
main/: CMakeLists.txt  User_Setup.h  main.cpp
